--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,5 @@
 import = [
-"~/alacritty-theme/theme/Cobalt2.toml"
+"~/alacritty-theme/themes/catppuccin_mocha.toml"
 ]
 
 [env]
@@ -8,15 +8,19 @@ TERM = "xterm-256color"
 [window]
 title = "allacritty"
 padding.x = 10
-padding.y = 30
+padding.y = 10
 decorations = "Buttonless"
-opacity = 0.8
-#blur = true
+opacity = 0.95
 option_as_alt = "Both"
+#dynamic_padding = true 
+#startup_mode = "Maximized"
 
 [font]
-normal.family = "0xProto Nerd Font Mono"
-size = 15
+normal = { family = "Hack Nerd Font Mono", style = "Regular" }
+bold = { family = "Hack Nerd Font Mono", style = "Bold" }
+italic = { family = "Hack Nerd Font Mono", style = "Italic" }
+bold_italic = { family = "Hack Nerd Font Mono", style = "Bold Italic" }
+size = 17
 
 [cursor]
 style.blinking = "On"
